FIX: minor fixes
